# Booklet

./: .gitignore  .python-version  Booklet.c  README.md  booklet copy.py  booklet.py  booklet.py.backup  booklet_kimi.py  config.py  files.txt  gpu_monitor.py  index.html  main.py  mftransc  parser.py  pyproject.toml  server.py  state.py  test.sh  tts_worker copy.py  tts_worker.py  wavmaker.cpp  wavmaker_fast
