[project]
name = "booklet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.14"
dependencies = [
    "fastapi[standard]>=0.128.7",
    "pocket-tts>=1.0.3",
    "pydub>=0.25.1",
    "pypdf>=6.7.0",
    "soundfile>=0.13.1",
    "torch>=2.10.0",
]
