[project]
name = "booklet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.14"
dependencies = [
    "fastapi[standard]>=0.128.7",
    "faster-whisper>=1.2.1",
    "k2>=0.3.0",
    "nvidia-ml-py3>=7.352.0",
    "psutil>=7.2.2",
    "pydub",
    "pypdf>=6.7.0",
    "soundfile>=0.13.1",
    "whisper>=1.1.10",
    "zipvoice",
]

[tool.uv.workspace]
members = [
    #"LuxTTS",
    "myLuxTTS",
]

[tool.uv.sources]
zipvoice = { workspace = true }
